--- a/praktikum4/package.json
+++ b/praktikum4/package.json
@@ -2,8 +2,9 @@
   "name": "praktikum4",
   "version": "0.1.0",
   "private": true,
-  "scripts": {
+  "script": {
     "dev": "next dev",
+    "test": "echo \"Error: no test specified\" && exit 1",
     "build": "next build",
     "start": "next start",
     "lint": "next lint"
