--- a/perteman-06/package.json
+++ b/perteman-06/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "perteman-06",
+  "name": "pertemuan-06",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -9,17 +9,22 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@reduxjs/toolkit": "^2.2.1",
     "bootstrap": "^5.3.3",
-    "next": "14.1.4",
+    "html-react-parser": "^5.1.9",
+    "next": "14.1.0",
+    "next-redux-wrapper": "^8.1.0",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "react-redux": "^9.1.0",
+    "redux-persist": "^6.0.0"
   },
   "devDependencies": {
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "eslint": "^8",
-    "eslint-config-next": "14.1.4",
+    "eslint-config-next": "14.1.0",
     "typescript": "^5"
   }
 }
